--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>RESEARCH</a><div class="dropdown-menu"><a class="dropdown-item" href="research_themes.html">Research themes</a><a class="dropdown-item" href="publications.html">Publications</a><a class="dropdown-item" href="Last_articles.html">Latest articles</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>MEMBERS</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="Joelle_Pelletier.html" aria-expanded="false">Prof. Joelle Pelletier</a><a class="dropdown-item text-primary" href="Donya.html" aria-expanded="false">Donya Valikhani<br></a><a class="dropdown-item text-primary" href="Adem_Parisien.html" aria-expanded="false">Adem H. Parisien<br></a><a class="dropdown-item text-primary" href="Claudele_Lemay-St-Denis.html" aria-expanded="false">Claudèle Lemay-St-Denis<br></a><a class="dropdown-item text-primary" href="Ali_Fendri.html" aria-expanded="false">Ali Fendri<br></a><a class="dropdown-item text-primary" href="page25.html" aria-expanded="false">German De Armas Guitart</a><a class="dropdown-item text-primary" href="KianaLafontaine.html" aria-expanded="false">Kiana Lafontaine<br></a><a class="dropdown-item text-primary" href="JonathanBesna.html" aria-expanded="false">Jonathan N. Besna<br></a><a class="dropdown-item text-primary" href="Hadi.html" aria-expanded="false">Abdelhadi Djaileb</a><a class="dropdown-item text-primary" href="Visitors.html" aria-expanded="false">Visitors<br></a><a class="dropdown-item text-primary" href="Interns.html" aria-expanded="false">Interns<br></a><a class="dropdown-item text-primary" href="alumni.html" aria-expanded="false">Alumni<br></a></div></li><li class="nav-item"><a class="nav-link link" href="courses_udem.html" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>COURSES</a></li><li class="nav-item"><a class="nav-link link text-primary" href="index.html#contacts2-2b"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(226, 80, 65);"></span></a></li><li class="nav-item"><a class="nav-link link" href="http://esilrch1.esi.umontreal.ca/~pelletjo/PageFR/Accueil"></a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>RESEARCH</a><div class="dropdown-menu"><a class="dropdown-item" href="research_themes.html">Research themes</a><a class="dropdown-item" href="publications.html">Publications</a><a class="dropdown-item" href="Last_articles.html">Latest articles</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>MEMBERS</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="Joelle_Pelletier.html" aria-expanded="false">Prof. Joelle Pelletier</a><a class="dropdown-item text-primary" href="Donya.html" aria-expanded="false">Donya Valikhani<br></a><a class="dropdown-item text-primary" href="Adem_Parisien.html" aria-expanded="false">Adem H. Parisien<br></a><a class="dropdown-item text-primary" href="Claudele_Lemay-St-Denis.html" aria-expanded="false">Claudèle Lemay-St-Denis<br></a><a class="dropdown-item text-primary" href="Ali_Fendri.html" aria-expanded="false">Ali Fendri<br></a><a class="dropdown-item text-primary" href="page25.html" aria-expanded="false">German De Armas Guitart</a><a class="dropdown-item text-primary" href="KianaLafontaine.html" aria-expanded="false">Kiana Lafontaine<br></a><a class="dropdown-item text-primary" href="JonathanBesna.html" aria-expanded="false">Jonathan N. Besna<br></a><a class="dropdown-item text-primary" href="Hadi.html" aria-expanded="false">Abdelhadi Djaileb</a><a class="dropdown-item text-primary" href="Visitors.html" aria-expanded="false">Visitors<br></a><a class="dropdown-item text-primary" href="Interns.html" aria-expanded="false">Interns<br></a><a class="dropdown-item text-primary" href="alumni.html" aria-expanded="false">Alumni<br></a></div></li><li class="nav-item"><a class="nav-link link" href="courses_udem.html" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>COURSES</a></li><li class="nav-item"><a class="nav-link link text-primary" href="index.html#contacts2-2b"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(226, 80, 65);"></span></a></li><li class="nav-item"><a class="nav-link link" href="http://esilrch1.esi.umontreal.ca/~pelletjo/PageFR/Accueil"></a></li></ul>
 
         </div>
 
@@ -86,7 +86,7 @@
                         <p>The Canadian Council of University Chemistry Chairs (CCUCC) recognized Prof. Pelletier for her distinguished contribution to chemistry while working in Canada.<br><br></p>
                     </div>
                 </div>
-                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 62px;">
+                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 0px;">
                     <div class="mbr-buttons mbr-buttons--center"><a href="https://www.cheminst.ca/awards/csc/benson/" class="mbr-buttons__btn btn btn-wrap btn-xs-lg btn-warning" target="_blank">READ MORE</a></div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                         <p>Congratulations to Lorea for her Ph.D. thesis defense on: Towards higher predictability in enzyme engineering, Investigating of protein epistasis in dynamics β-lactamases and Cal-A lipase.<br></p>
                     </div>
                 </div>
-                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 62px;">
+                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 0px;">
                     <div class="mbr-buttons mbr-buttons--center"><a href="https://biochimie.umontreal.ca/calendrier/soutenance-de-these-lorea-alejaldre-ripalda/" class="mbr-buttons__btn btn btn-wrap btn-xs-lg btn-primary" target="_blank">READ MORE</a></div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
 <br><br>&nbsp;<br>Published in Methods in Enzymology</p>
                     </div>
                 </div>
-                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 62px;">
+                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 0px;">
                     <div class="mbr-buttons mbr-buttons--center"><a href="https://www.sciencedirect.com/science/article/pii/S0076687920301944?via%3Dihub" class="mbr-buttons__btn btn btn-wrap btn-xs-lg btn-info" target="_blank">READ ARTICLE</a></div>
                 </div>
             </div>
@@ -130,15 +130,15 @@
                 
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">RECENT REVIEWS HAVE BEEN PUBLISHED</h3>
+                        <h3 class="mbr-header__text">2 RECENT REVIEWS HAVE RECENTLY BEEN PUBLISHED</h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p>p450 Immobilization methods and techniques was accepted for publication in ACS catalysis.<br><br>Methods of mutagenesis and library creation was accepted for publication.<br></p>
+                        <p><em>Cytochrome P450 Immobilization Strategies</em> [...] was published in ACS catalysis.<br>_________________________<br><br><em>Methods of mutagenesis and library creation</em> was published in BioEssays.<br></p>
                     </div>
                 </div>
-                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 62px;">
+                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 0px;">
                     <div class="mbr-buttons mbr-buttons--center"><a href="Last_articles.html" class="mbr-buttons__btn btn btn-wrap btn-xs-lg btn-success">READ ARTICLES</a></div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                         <p>Congratulations to Adem&nbsp; for his oral presentation: Site-specific modification of IgG1 antibodies using the glutamine-walk strategy. The event was held virtually by the Université Laval.<br></p>
                     </div>
                 </div>
-                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 62px;">
+                <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 0px;">
                     <div class="mbr-buttons mbr-buttons--center"><a href="https://www.biomolar.uottawa.ca/who-we-are.html" class="mbr-buttons__btn btn btn-wrap btn-xs-lg btn-danger" target="_blank">LEARN MORE</a></div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
 
 <section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom" id="image1-e" data-rv-view="8" style="background-color: rgb(37, 37, 37);">
 
-    <div><img src="assets/images/team-3-1178x891.jpg" class="mbr-figure__img"></div>
+    <div><img src="assets/images/caf8faed-e1d6-4a63-ac6d-3d576b57489b-1-1400x875.jpeg" class="mbr-figure__img"></div>
     
 </section>
 
@@ -222,7 +222,7 @@
                                 <div class=" col-md-8 col-md-offset-2">  
 
                                 <div class="mbr-hero">
-                                    <h1 class="mbr-hero__text">Cytochromes P450s<br><br></h1>
+                                    <h1 class="mbr-hero__text">Cytochrome P450s<br><br></h1>
 
                                     <p class="mbr-hero__subtext">Cytochrome P450s oxidize hydrophobic compounds to increase the body's capacity to eliminate those compounds. The oxidation reactions they catalyze hold great potential for biocatalytic applications. However, there is a need to tailor cytochrome P450s to catalyze specific, industrially-relevant reactions. We are contributing to a joint computational/experimental effort to improve the efficiency of evolution of this class of enzymes.</p>
                                 </div>
@@ -288,7 +288,7 @@
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
             <div class="col-sm-6">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--no-bg">
-                    <div class="mbr-figure__map mbr-figure__map--short"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=MIL campus" allowfullscreen=""></iframe></div>
+                    <div class="mbr-figure__map mbr-figure__map--short"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=MIL campus" allowfullscreen=""></iframe></div>
                 </figure>
             </div>
             <div class="col-sm-6">
