--- a/Adem_Parisien.html
+++ b/Adem_Parisien.html
@@ -176,7 +176,7 @@
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 62px;">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>•    Deweid, L.*, <strong>H.-Parisien, A.*</strong>, Lafontaine, K., Rochet, L.N.C., Kolmar, H. and Pelletier, J.N. (2020) Glutamine-walking: creating reactive substrates for transglutaminase-mediated protein labelling. Met. Enzymol., 644:121-148. (*equal contribution)</p><p>•    Rousseau, O., Ebert, M.C., Quaglia, D., Fendri, A., <strong>H.-Parisien, A.</strong>, Besna, J. N., Iyathurai, S. and Pelletier, J.N. (2019) Indigo Formation and Rapid NADPH Consumption Provide Robust Prediction of Raspberry Ketone Synthesis by Engineered Cytochrome P450 BM3. ChemCatChem, 12(3): 837-845.</p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p style="color:white;">•    Deweid, L.*, <strong>H.-Parisien, A.*</strong>, Lafontaine, K., Rochet, L.N.C., Kolmar, H. and Pelletier, J.N. (2020) Glutamine-walking: creating reactive substrates for transglutaminase-mediated protein labelling. Met. Enzymol., 644:121-148. (*equal contribution)</p><p style="color:white;">•    Rousseau, O., Ebert, M.C., Quaglia, D., Fendri, A., <strong>H.-Parisien, A.</strong>, Besna, J. N., Iyathurai, S. and Pelletier, J.N. (2019) Indigo Formation and Rapid NADPH Consumption Provide Robust Prediction of Raspberry Ketone Synthesis by Engineered Cytochrome P450 BM3. ChemCatChem, 12(3): 837-845.</p></div>
         </div>
     </div>
     
