--- a/Last_articles.html
+++ b/Last_articles.html
@@ -152,11 +152,11 @@
                     <div class="mbr-section__container mbr-section__container--middle">
                         <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
                             <h3 class="mbr-header__text">Methods for enzyme library creation: Which one will you choose?</h3>
-                            <p class="mbr-header__subtext">A guide for novices and experts to introduce genetic diversity</p>
+                            <p class="mbr-header__subtext"; style="color:black;">A guide for novices and experts to introduce genetic diversity</p>
                         </div>
                     </div>
                     <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><em><strong>BioEssays,</strong>&nbsp;Methods, Models and Techniques.</em></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"; style="color:white;"><em><strong>BioEssays,</strong>&nbsp;Methods, Models and Techniques.</em></div>
                     </div>
                     
                 </div>
@@ -178,7 +178,7 @@
     </div>
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>Enzyme engineering allows to explore sequence diversity in search for new properties. The scientific literature is populated with methods to create enzyme libraries for engineering purposes, however, choosing a suitable method for the creation of mutant libraries can be daunting, in particular for the novices. Here, we address both novices and experts: how can one enter the arena of enzyme library design and what guidelines can advanced users apply to select strategies best suited to their purpose? Section I is dedicated to the novices and presents an overview of established and standard methods for library creation, as well as available commercial solutions. The expert will discover an up-to-date tool to freshen up their repertoire (Section I) and learn of the newest methods that are likely to become a mainstay (Section II). We focus primarily on in vitro methods, presenting the advantages of each method. Our ultimate aim is to offer a selection of methods/strategies that we believe to be most useful to the enzyme engineer, whether a first-timer or a seasoned user.
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p style="color:black;">Enzyme engineering allows to explore sequence diversity in search for new properties. The scientific literature is populated with methods to create enzyme libraries for engineering purposes, however, choosing a suitable method for the creation of mutant libraries can be daunting, in particular for the novices. Here, we address both novices and experts: how can one enter the arena of enzyme library design and what guidelines can advanced users apply to select strategies best suited to their purpose? Section I is dedicated to the novices and presents an overview of established and standard methods for library creation, as well as available commercial solutions. The expert will discover an up-to-date tool to freshen up their repertoire (Section I) and learn of the newest methods that are likely to become a mainstay (Section II). We focus primarily on in vitro methods, presenting the advantages of each method. Our ultimate aim is to offer a selection of methods/strategies that we believe to be most useful to the enzyme engineer, whether a first-timer or a seasoned user.
 </p><p><br></p><p>
 </p></div>
         </div>
