Changed page names
should appear on google search more easily now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Home EN</title>
+  <title>Joelle Pelletier Lab</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -164,7 +164,7 @@
     </div>
 </section>
 
-<section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom" id="image1-e" data-rv-view="8" style="background-color: rgb(37, 37, 37);">
+<section class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom" id="image1-e" data-rv-view="8" style="background-color: rgb(255, 255, 255);">
 
     <div><img src="assets/images/caf8faed-e1d6-4a63-ac6d-3d576b57489b-1-1400x875.jpeg" class="mbr-figure__img"></div>
     
@@ -288,7 +288,7 @@
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
             <div class="col-sm-6">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--no-bg">
-                    <div class="mbr-figure__map mbr-figure__map--short"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=MIL campus" allowfullscreen=""></iframe></div>
+                    <div class="mbr-figure__map mbr-figure__map--short"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=MIL campus" allowfullscreen=""></iframe></div>
                 </figure>
             </div>
             <div class="col-sm-6">
