--- a/lab.html
+++ b/lab.html
@@ -60,7 +60,7 @@ else
 <!--Claudèle-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Claudèle</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Calendar, DNA room, Speed-vac, Decontamination, Autoclave </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Calendar, DNA room, Decontamination, Autoclave </big></font></big></div></td><big>
    </big></tr>
 
 <!--Adem-->
@@ -72,7 +72,7 @@ else
 <!--Ali-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Ali</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Incubateur/agitateur, computer, vaisselle, Quartzy, Spectrophotometer</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Incubateur/agitateur, computer, vaisselle, Spectrophotometer</big></font></big></div></td><big>
    </big></tr>
 
 <!--Donya-->
@@ -84,19 +84,19 @@ else
 <!--Jonathan-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Jonathan</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Website, vaisselle, Lab sinks, Balances, Carbon monoxide Hood</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Freezer -20/-80, Lab sinks, Balances, Carbon monoxide Hood</big></font></big></div></td><big>
    </big></tr>
 
 <!--Stella-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Stella</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Freezer -20/-80, Fridge, Marvin </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Website, Quartzy, Fridge, Marvin </big></font></big></div></td><big>
    </big></tr>
 
 <!--Kiana-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Kiana</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> pHmeter, Colony Picker, Shakers </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Speed-vac, pHmeter, Colony Picker, Shakers </big></font></big></div></td><big>
    </big></tr>
 
 <!--Étienne-->
