--- a/lab.html
+++ b/lab.html
@@ -60,13 +60,13 @@ else
 <!--Claudèle-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Claudèle</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Calendar, DNA room, Decontamination, Autoclave </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Calendar, DNA room, Autoclave, Sonicator</big></font></big></div></td><big>
    </big></tr>
 
 <!--Adem-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Adem</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> SDS-PAGE gel room, FPLC, Pipettes </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> SDS-PAGE gel room, FPLC, Pipettes, Cell disrupter </big></font></big></div></td><big>
    </big></tr>
 
 <!--Ali-->
@@ -78,7 +78,7 @@ else
 <!--Donya-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Donya</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big>Plate reader, Cell disrupter, Centrifuges, Sonicator, Fume hood</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big>Plate reader, Centrifuges, Fume hood, Decontamination</big></font></big></div></td><big>
    </big></tr>
 
 <!--Jonathan-->
@@ -90,13 +90,13 @@ else
 <!--Stella-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Stella</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Website, Quartzy, Fridge, Marvin </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Website, Quartzy, Fridge, </big></font></big></div></td><big>
    </big></tr>
 
 <!--Kiana-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Kiana</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Speed-vac, pHmeter, Colony Picker, Shakers </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Speed-vac, pHmeter, Shakers, Marvin </big></font></big></div></td><big>
    </big></tr>
 
 <!--Étienne-->
