Mise à jour taches A22
Ajouter nouveaux étudiants

--- a/lab_tasks/lab_tasks.html
+++ b/lab_tasks/lab_tasks.html
@@ -60,46 +60,47 @@ else
 <!--Jonathan-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Jonathan</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Incubateur/agitateur, Marvin, DNA room, Plate reader, Speed-vac, Colony Picker, Carbon monoxide alarm </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> CO incubator / Balances / Hottes main lab / Sonicateur / Incubateurs (-80 + covid room)</big></font></big></div></td><big>
    </big></tr>
 <!--Stella-->
   <tr><big> 
         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Stella</big></font></big></div></td><big>
-        </big><td><big> </big><div align="center"><big><font size="2"><big> Incubateur/agitateur, Marvin, DNA room, Plate reader, Speed-vac, Colony Picker, Carbon monoxide alarm </big></font></big></div></td><big>
+        </big><td><big> </big><div align="center"><big><font size="2"><big> Site Web / Colony picker </big></font></big></div></td><big>
   </big></tr>
-<!--Étienne-->
-   <tr><big> 
-         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Étienne</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big>Commandes, Covid Room </big></font></big></div></td><big>
-   </big></tr>
 <!--Adem-->
   <tr><big> 
           </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Adem</big></font></big></div></td><big>
-          </big><td><big> </big><div align="center"><big><font size="2"><big> SDS-PAGE gel room, FPLC, Pipettes </big></font></big></div></td><big>
+          </big><td><big> </big><div align="center"><big><font size="2"><big> Decontamination / Salle SDS PAGE / Pipettes / Speed Vac / FPLC </big></font></big></div></td><big>
   </big></tr>
 <!--Ali-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Ali</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Website, computer, vaisselle, pHmeter, Quartzy, Freezer 
--20/-80, Fridge, Spectrophotometer</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Vaisselle / Ordinateurs / Freezer -20/-80 / Spectrophotometer / pH meter (main lab) </big></font></big></div></td><big>
    </big></tr>
-
 <!--Claudèle-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Claudèle</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Calendar, Balances, Decontamination, Autoclave </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> ---- </big></font></big></div></td><big>
    </big></tr>
-
-<!--Donya-->
+<!--Megan-Faye-->
    <tr><big> 
-         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Donya</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Cell disrupter, Centrifuges, Shakers, Sonicator, Fume hood </big></font></big></div></td><big>
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Megan-Faye</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Commandes / Calendrier </big></font></big></div></td><big>
    </big></tr>
-
+<!--Maxime-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Maxime</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Marvin / Autoclave / Frigo / Cell disrupteur (never use sonicator before) / Centrifuges (Tremblay covid / Bertha -80) refaire feuilles utilisations </big></font></big></div></td><big>
+   </big></tr>
+<!--Tous-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Tous</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Quartzy / Inventaire / Bench / Autoclave biologie </big></font></big></div></td><big>
+   </big></tr>
 <!--Joelle-->
 	<tr><big> 
     </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Joelle</big></font></big></div></td><big>
-    </big><td><big> </big><div align="center"><big><font size="2"><big>Fouetter les étudiants, Commandes</big></font></big></div></td><big>
+    </big><td><big> </big><div align="center"><big><font size="2"><big>Fouetter les étudiants</big></font></big></div></td><big>
   	</big></tr><big>
 
 
