Mise à jour tâches A22 détails
Ajout détails à jour

--- a/lab_tasks/lab_tasks.html
+++ b/lab_tasks/lab_tasks.html
@@ -35,13 +35,13 @@ else
 <br>
 
 <font style="font-family: Times New Roman,Times,serif; color: black;" face="Arial, Helvetica, sans-serif" size="2"><big><strong><em>Horaire</em> 
-  =</strong> <strong> Mardi: 09h00-11h00 --- Local: F-524 </strong></big></font><br style="font-family: Times New Roman,Times,serif; color: black;">
+  =</strong> <strong> Vendredi: 08h30-10h15 --- Local: B vitré-3404 </strong></big></font><br style="font-family: Times New Roman,Times,serif; color: black;">
 <br style="font-family: Times New Roman,Times,serif; color: black;">
 <font style="font-family: Times New Roman,Times,serif; color: black;" face="Arial, Helvetica, sans-serif" size="2"><big><strong></strong></big></font><br style="font-family: Times New Roman,Times,serif; color: black;">
 
 
 <!-- Liste des tâches -->
-<font style="font-family: Times New Roman,Times,serif; color: black;" face="Arial, Helvetica, sans-serif" size="2"><big><strong><em>Liste des tâches (2019) :</em></strong></big></font></big>
+<font style="font-family: Times New Roman,Times,serif; color: black;" face="Arial, Helvetica, sans-serif" size="2"><big><strong><em>Liste des tâches (2022) :</em></strong></big></font></big>
 <table style="font-family: Times New Roman,Times,serif; color: black; text-align: left; background-color: white; width: 59%;" border="1">
   <big>
 
