SCG_update_home-page
home page layout was updated, links on all pages were verified and updated

--- a/page25.html
+++ b/page25.html
@@ -44,7 +44,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="page34.html" aria-expanded="false"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>RESEARCH /<br>&nbsp; &nbsp; &nbsp; &nbsp;RECHERCHE</a></li><li class="nav-item"><a class="nav-link link text-primary" href="page30.html" aria-expanded="false"><span class="mbrib-users mbr-iconfont mbr-iconfont-btn"></span>TEAM <br>&nbsp; &nbsp; &nbsp; EQUIPE</a></li><li class="nav-item"><a class="nav-link link text-primary" href="courses_udem.html" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>COURSES<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;COURS</a></li><li class="nav-item"><a class="nav-link link text-primary" href="page32.html#contacts2-91"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-primary" href="page33.html" aria-expanded="false"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(237, 5, 61);"></span></a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="recherche.html" aria-expanded="false"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>RESEARCH<br>&nbsp; &nbsp; &nbsp; RECHERCHE</a></li><li class="nav-item"><a class="nav-link link text-primary" href="team_members.html" aria-expanded="false"><span class="mbrib-users mbr-iconfont mbr-iconfont-btn"></span>TEAM <br>&nbsp; &nbsp; &nbsp; EQUIPE</a></li><li class="nav-item"><a class="nav-link link text-primary" href="courses_udem.html" aria-expanded="false"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>COURSES<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;COURS</a></li><li class="nav-item"><a class="nav-link link text-primary" href="index.html#contacts2-98"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item"><a class="nav-link link text-primary" href="index.html" aria-expanded="false"><span class="mbri-home mbr-iconfont mbr-iconfont-btn" style="color: rgb(237, 5, 61);"></span></a></li></ul>
 
         </div>
 
@@ -195,7 +195,7 @@
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
             <div class="col-sm-6">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--no-bg">
-                    <div class="mbr-figure__map mbr-figure__map--short"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=MIL campus" allowfullscreen=""></iframe></div>
+                    <div class="mbr-figure__map mbr-figure__map--short"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=MIL campus" allowfullscreen=""></iframe></div>
                 </figure>
             </div>
             <div class="col-sm-6">
