summer 2023 team members
added Alexis to team members page

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p>Le laboratoire Joelle Pelletier est heureux d'accueillir deux stagiaires qui nous rejoindront pour l'été : Arianne Pageau-Ruffet et Megan Sanda-Staicopol.<br></p>
+                        <p>Le laboratoire Joelle Pelletier est heureux d'accueillir un nouvel étudiant à la maitrise, Alexis Bonneau-Burke, et deux stagiaires qui nous rejoindront pour l'été : Arianne Pageau-Ruffet et Megan Sanda-Staicopol.<br></p>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 31px;">
