--- a/index_en.html
+++ b/index_en.html
@@ -193,12 +193,12 @@
                 
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
-                        <h3 class="mbr-header__text">NEW INTERNS</h3>
+                        <h3 class="mbr-header__text">NEW TEAM MEMBERS 2023</h3>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-article mbr-article--wysiwyg">
-                        <p>The Joelle Pelletier laboratory is pleased to welcome two interns who will be joining us this summer:&nbsp;Arianne Pageau-Ruffet and&nbsp;Megan Sanda-Staicopol.</p>
+                        <p>The Joelle Pelletier laboratory is pleased to welcome a new Master student, Alexis Bonneau-Burke, and two interns who will be joining us this summer:&nbsp;Arianne Pageau-Ruffet and&nbsp;Megan Sanda-Staicopol.</p>
                     </div>
                 </div>
                 <div class="mbr-section__container mbr-section__container--last" style="padding-bottom: 31px;">
