2023 summer lab tasks
updated lab tasks as of summer 2023

--- a/lab_tasks/lab_tasks.html
+++ b/lab_tasks/lab_tasks.html
@@ -35,7 +35,7 @@ else
 <br>
 
 <font style="font-family: Times New Roman,Times,serif; color: black;" face="Arial, Helvetica, sans-serif" size="2"><big><strong><em>Horaire</em> 
-  =</strong> <strong> Vendredi: 08h30-10h15 --- Local: B vitré-3404 </strong></big></font><br style="font-family: Times New Roman,Times,serif; color: black;">
+  =</strong> <strong> Mardi: 9h00-11h00 --- Local: B2278  </strong></big></font><br style="font-family: Times New Roman,Times,serif; color: black;">
 <br style="font-family: Times New Roman,Times,serif; color: black;">
 <font style="font-family: Times New Roman,Times,serif; color: black;" face="Arial, Helvetica, sans-serif" size="2"><big><strong></strong></big></font><br style="font-family: Times New Roman,Times,serif; color: black;">
 
@@ -60,37 +60,57 @@ else
 <!--Jonathan-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Jonathan</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> CO incubator / Balances / Hottes main lab / Sonicateur / Incubateurs (-80 + covid room)</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> CO incubator / Balances / Sonicateur </big></font></big></div></td><big>
    </big></tr>
 <!--Stella-->
   <tr><big> 
         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Stella</big></font></big></div></td><big>
-        </big><td><big> </big><div align="center"><big><font size="2"><big> Site Web / Colony picker </big></font></big></div></td><big>
+        </big><td><big> </big><div align="center"><big><font size="2"><big> Site Web / Feuilles instruments </big></font></big></div></td><big>
   </big></tr>
 <!--Adem-->
   <tr><big> 
           </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Adem</big></font></big></div></td><big>
-          </big><td><big> </big><div align="center"><big><font size="2"><big> Decontamination / Salle SDS PAGE / Pipettes / Speed Vac / FPLC </big></font></big></div></td><big>
+          </big><td><big> </big><div align="center"><big><font size="2"><big> Salle SDS PAGE Speed Vac / FPLC </big></font></big></div></td><big>
   </big></tr>
 <!--Ali-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Ali</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Vaisselle / Ordinateurs / Freezer -20/-80 / Spectrophotometer / pH meter (main lab) </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Ordinateurs / Freezer -20/-80 / Spectrophotometer </big></font></big></div></td><big>
    </big></tr>
 <!--Claudèle-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Claudèle</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> ---- </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Bio waste / Calendrier / Incubateurs -80 </big></font></big></div></td><big>
    </big></tr>
 <!--Megan-Faye-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Megan-Faye</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Commandes / Calendrier </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Commandes / Bertha </big></font></big></div></td><big>
    </big></tr>
 <!--Maxime-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Maxime</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Marvin / Autoclave / Frigo / Cell disrupteur (never use sonicator before) / Centrifuges (Tremblay covid / Bertha -80) refaire feuilles utilisations </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Autoclave / Frigo / pH metre </big></font></big></div></td><big>
+   </big></tr>
+<!--Alexis-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Alexis</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Pipettes </big></font></big></div></td><big>
+   </big></tr>
+<!--Daniela-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Daniela</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Plate reader (COVID) / benchtop Trembly / incubateur (statique / COVID) </big></font></big></div></td><big>
+   </big></tr>
+<!--Doug-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Doug</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Hoods main lab / Marvin / Colony picker </big></font></big></div></td><big>
+   </big></tr>
+<!--Samy-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Samy</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Vaisselle </big></font></big></div></td><big>
    </big></tr>
 <!--Tous-->
    <tr><big> 
