lab_tasks_fall24
update to lab tasks for fall 2024

--- a/lab_tasks/lab_tasks.html
+++ b/lab_tasks/lab_tasks.html
@@ -60,17 +60,17 @@ else
 <!--Jonathan-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Jonathan</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> CO incubator / Balances / Sonicateur / Biowaste / Spectrophotometer / -80 </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> CO incubator / Balances / Sonicateur / Biowaste / Spectrophotometer / -80 / Incubators -80 </big></font></big></div></td><big>
    </big></tr>
 <!--Stella-->
   <tr><big> 
         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Stella</big></font></big></div></td><big>
-        </big><td><big> </big><div align="center"><big><font size="2"><big> Site Web / Feuilles instruments / Calendrier / Ordinateurs / Incubators -80 </big></font></big></div></td><big>
+        </big><td><big> </big><div align="center"><big><font size="2"><big> Site Web </big></font></big></div></td><big>
   </big></tr>
 <!--Megan-Faye-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Megan-Faye</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Commandes / Bertha / Autoclave / FPLC / Plate reader (COVID) / benchtop Trembly / Incubator (COVID) </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Commandes </big></font></big></div></td><big>
    </big></tr>
 <!--Alexis-->
    <tr><big> 
@@ -80,12 +80,17 @@ else
 <!--Doug-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Doug</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Hoods main lab / Marvin / Colony picker / 4C Fridge / -20 </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Hoods main lab / Marvin / Colony picker / 4C Fridge / -20 / Bertha / Autoclave / benchtop Trembly / Feuilles instruments </big></font></big></div></td><big>
    </big></tr>
 <!--Samy-->
    <tr><big> 
          </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Samy</big></font></big></div></td><big>
-         </big><td><big> </big><div align="center"><big><font size="2"><big> Vaisselle / SDS Page </big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Vaisselle / SDS Page / FPLC / Plate reader (COVID) / Incubator (COVID) </big></font></big></div></td><big>
+   </big></tr>
+<!--Roxana-->
+   <tr><big> 
+         </big><td height="49"><big> </big><div align="center"><big><font size="2"><big>Roxana</big></font></big></div></td><big>
+         </big><td><big> </big><div align="center"><big><font size="2"><big> Calendrier / Ordinateurs </big></font></big></div></td><big>
    </big></tr>
 <!--Tous-->
    <tr><big> 
